--- a/src/main/webapp/resources/css/mypage.css
+++ b/src/main/webapp/resources/css/mypage.css
@@ -41,3 +41,10 @@ footer {
 	width: 100%;
 }
 
+/* 에러메세지 */
+.error_next_box {
+	margin-top: 9px;
+	font-size: 12px;
+	color: red;
+	display: none;
+}
